Date picker added to transactions report

--- a/app/src/main/res/layout/fragment_transactions_reports.xml
+++ b/app/src/main/res/layout/fragment_transactions_reports.xml
@@ -133,15 +133,21 @@
                                                 android:text="Start Date"
                                                 android:textColor="@color/ez_grey" />
 
-                                            <EditText
-                                                android:id="@+id/startDateTransaction"
+                                            <TextView
+                                                android:id="@+id/startDatePicker"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="50dp"
-                                                android:ems="10"
-                                                android:hint="YYYY/MM/DD"
-                                                android:inputType="date"
+                                                android:hint="Select Start Date"
                                                 android:textColor="@color/white"
-                                                android:textColorHint="@color/white" />
+                                                android:textColorHint="@color/white"
+                                                android:gravity="center_vertical"
+                                                android:paddingLeft="12dp"
+                                                android:paddingRight="12dp"
+                                                android:background="?android:attr/selectableItemBackground"
+                                                android:clickable="true"
+                                                android:focusable="true"
+                                                android:drawableEnd="@drawable/ic_calendar"
+                                                android:drawablePadding="8dp" />
                                         </LinearLayout>
                                     </FrameLayout>
 
@@ -185,15 +191,21 @@
                                                 android:text="End Date"
                                                 android:textColor="@color/ez_grey" />
 
-                                            <EditText
-                                                android:id="@+id/endDateTransaction"
+                                            <TextView
+                                                android:id="@+id/endDatePicker"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="50dp"
-                                                android:ems="10"
-                                                android:hint="YYYY/MM/DD"
-                                                android:inputType="date"
+                                                android:hint="Select End Date"
                                                 android:textColor="@color/white"
-                                                android:textColorHint="@color/white" />
+                                                android:textColorHint="@color/white"
+                                                android:gravity="center_vertical"
+                                                android:paddingLeft="12dp"
+                                                android:paddingRight="12dp"
+                                                android:background="?android:attr/selectableItemBackground"
+                                                android:clickable="true"
+                                                android:focusable="true"
+                                                android:drawableEnd="@drawable/ic_calendar"
+                                                android:drawablePadding="8dp" />
                                         </LinearLayout>
                                     </FrameLayout>
 
