--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -87,7 +87,7 @@
                         android:layout_weight="1">
 
                         <ImageButton
-                            android:id="@+id/imageButton2"
+                            android:id="@+id/rankingButton"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
