--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -83,4 +83,9 @@
         android:name="com.example.prog7313_poe.ui.goals.NewGoalsFragment"
         android:label="fragment_new_goals"
         tools:layout="@layout/fragment_new_goals" />
+    <fragment
+        android:id="@+id/rankingFragment2"
+        android:name="com.example.prog7313_poe.ui.ranking.RankingFragment"
+        android:label="fragment_ranking"
+        tools:layout="@layout/fragment_ranking" />
 </navigation>
