--- a/app/src/main/res/layout/fragment_reports.xml
+++ b/app/src/main/res/layout/fragment_reports.xml
@@ -105,10 +105,11 @@
                                     android:id="@+id/textView11"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_weight="1"
+                                    android:layout_marginLeft="8dp"
+                                    android:layout_marginRight="8dp"
                                     android:text="TextView"
-                                    android:textAlignment="center"
-                                    android:textColor="@color/white" />
+                                    android:textColor="@color/white"
+                                    android:textSize="16sp" />
 
                                 <ImageButton
                                     android:id="@+id/imageButton4"
@@ -244,10 +245,11 @@
                                     android:id="@+id/TransactionsMonth"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_weight="1"
+                                    android:layout_marginLeft="8dp"
+                                    android:layout_marginRight="8dp"
                                     android:text="TextView"
-                                    android:textAlignment="center"
-                                    android:textColor="@color/white" />
+                                    android:textColor="@color/white"
+                                    android:textSize="16sp" />
 
                                 <ImageButton
                                     android:id="@+id/reportsTransactionsNextMonthBttn"
@@ -331,6 +333,81 @@
 
                         </LinearLayout>
 
+                    </FrameLayout>
+
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginRight="10dp"
+                        android:background="@drawable/border">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical"
+                            android:padding="12dp">
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:gravity="center_vertical"
+                                android:orientation="horizontal">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="Trends"
+                                    android:textColor="@color/ez_yellow"
+                                    android:textSize="20sp" />
+
+                                <Space
+                                    android:layout_width="0dp"
+                                    android:layout_height="1dp"
+                                    android:layout_weight="1" />
+
+                                <ImageButton
+                                    android:id="@+id/reportsTrendsPrevMonthBttn"
+                                    android:layout_width="50dp"
+                                    android:layout_height="50dp"
+                                    android:background="@android:color/transparent"
+                                    android:src="@drawable/chevron_left" />
+
+                                <TextView
+                                    android:id="@+id/reportsTrendsMonth"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginLeft="8dp"
+                                    android:layout_marginRight="8dp"
+                                    android:text="TextView"
+                                    android:textColor="@color/white"
+                                    android:textSize="16sp" />
+
+                                <ImageButton
+                                    android:id="@+id/reportsTrendsNextMonthBttn"
+                                    android:layout_width="50dp"
+                                    android:layout_height="50dp"
+                                    android:background="@android:color/transparent"
+                                    android:src="@drawable/chevron_right" />
+                            </LinearLayout>
+
+                            <com.github.mikephil.charting.charts.LineChart
+                                android:id="@+id/reportsLineChart"
+                                android:layout_width="339dp"
+                                android:layout_height="126dp"
+                                android:layout_marginTop="12dp" />
+
+                            <TextView
+                                android:id="@+id/viewAllTrends"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_horizontal"
+                                android:layout_marginTop="8dp"
+                                android:text="View all trends"
+                                android:textColor="@color/ez_yellow"
+                                android:textSize="14sp" />
+                        </LinearLayout>
                     </FrameLayout>
 
                 </LinearLayout>
