--- a/app/src/main/res/layout/fragment_transactions.xml
+++ b/app/src/main/res/layout/fragment_transactions.xml
@@ -31,9 +31,10 @@
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:background="@drawable/roundstyle_black"
-                    android:scaleType="fitStart"
                     android:contentDescription="@string/back_button_description"
-                    android:src="@drawable/arrow_left" />
+                    android:scaleType="fitStart"
+                    android:src="@drawable/arrow_left"
+                    android:visibility="invisible" />
 
                 <TextView
                     android:id="@+id/textView2"
