--- a/app/src/main/res/layout/fragment_goals.xml
+++ b/app/src/main/res/layout/fragment_goals.xml
@@ -33,7 +33,8 @@
                     android:background="@drawable/roundstyle_black"
                     android:contentDescription="@string/back_button_description"
                     android:scaleType="fitStart"
-                    android:src="@drawable/arrow_left" />
+                    android:src="@drawable/arrow_left"
+                    android:visibility="invisible" />
 
                 <TextView
                     android:id="@+id/textView2"
@@ -80,7 +81,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
-                        android:background="@drawable/border">
+                        android:background="@drawable/border"
+                        android:visibility="visible">
 
                         <LinearLayout
                             android:layout_width="match_parent"
