--- a/app/src/main/res/layout/fragment_reports.xml
+++ b/app/src/main/res/layout/fragment_reports.xml
@@ -324,7 +324,7 @@
                             <Button
                                 android:id="@+id/AllTransactionsBttn"
                                 android:layout_width="match_parent"
-                                android:layout_height="50dp"
+                                android:layout_height="wrap_content"
                                 android:layout_marginTop="5dp"
                                 android:background="@color/ez_black"
                                 android:text="View all transactions"
