--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -281,7 +281,7 @@
                                 android:layout_weight="1" />
 
                             <ImageButton
-                                android:id="@+id/reportsPreviousCategoryMonth"
+                                android:id="@+id/previousCategoryMonth"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
@@ -289,7 +289,7 @@
                                 android:src="@drawable/chevron_left" />
 
                             <TextView
-                                android:id="@+id/textView11"
+                                android:id="@+id/categoryMonthDash"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
@@ -298,7 +298,7 @@
                                 android:textColor="@color/white" />
 
                             <ImageButton
-                                android:id="@+id/imageButton4"
+                                android:id="@+id/nextCategoryMonth"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
@@ -329,11 +329,11 @@
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
                                     android:gravity="center|top"
-                                    android:text="Over Budget"
+                                    android:text="Total Expense"
                                     android:textColor="@color/ez_grey" />
 
                                 <TextView
-                                    android:id="@+id/HighBudget"
+                                    android:id="@+id/totalExpenseCategories"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
@@ -345,7 +345,8 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
-                                android:orientation="vertical">
+                                android:orientation="vertical"
+                                android:visibility="invisible">
 
                                 <TextView
                                     android:id="@+id/LowBudgetTitle"
@@ -428,7 +429,7 @@
                                 android:src="@drawable/chevron_left" />
 
                             <TextView
-                                android:id="@+id/TransactionsMonth"
+                                android:id="@+id/TransactionsMonthDash"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
@@ -472,7 +473,7 @@
                                     android:textColor="@color/ez_grey" />
 
                                 <TextView
-                                    android:id="@+id/IcomeView"
+                                    android:id="@+id/IncomeViewTransactions"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
@@ -496,7 +497,7 @@
                                     android:textColor="@color/ez_grey" />
 
                                 <TextView
-                                    android:id="@+id/ExpenseView"
+                                    android:id="@+id/ExpenseViewTransactions"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
